compiler/tests/en/errors/layout_nest.salam
// EXPECT: E004
layout:
    item: content = "orphan" end
end
